--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,14 @@
 <resources>
     <string name="app_name">PickMeUp</string>
     <string name="title_activity_add_route">Agregar Ruta</string>
+    <string name="title_activity_login">Login</string>
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="new_route_message">Publica una nueva ruta</string>
+
+    <!-- Login Page -->
+    <string name="text_username">Username</string>
+    <string name="text_password">Password</string>
+    <string name="btn_login">Login</string>
 </resources>
