--- a/pickmeup/src/main/res/values/strings.xml
+++ b/pickmeup/src/main/res/values/strings.xml
@@ -66,6 +66,12 @@
     <string name="passengers">Pasajeros</string>
     <string name="join">Unirte</string>
 
+
+    <!-- Confirmation Dialog-->
+    <string name="logout">Would you like to logout?</string>
+    <string name="confirmationDialog">Yes</string>
+    <string name="refuseDialog">No</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
