--- a/pickmeup/src/main/res/values/strings.xml
+++ b/pickmeup/src/main/res/values/strings.xml
@@ -14,6 +14,8 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="title_activity_nav_drawer">NavDrawerActivity</string>
 
+    <string name="saving_message">Grabando...</string>
+
     <!-- Login Page -->
     <string name="username">Username</string>
     <string name="password">Password</string>
@@ -65,6 +67,7 @@
     <string name="available">Disponibles</string>
     <string name="passengers">Pasajeros</string>
     <string name="join">Unirte</string>
+    <string name="join_route_message">Te has unido a la ruta satisfactoriamente</string>
 
 
     <!-- Confirmation Dialog-->
