--- a/pickmeup/src/main/res/values/strings.xml
+++ b/pickmeup/src/main/res/values/strings.xml
@@ -29,10 +29,17 @@
     <string name="username_invalid_error">The username should be an email address</string>
 
     <!-- sign up Page -->
-    <string name="name">Name</string>
-    <string name="name_empty_error">Name should not be empty</string>
+    <string name="name">First Name</string>
+    <string name="name_empty_error">First Name should not be empty</string>
+    <string name="last_name">Last Name</string>
+    <string name="last_name_empty_error">Last Name should not be empty</string>
+    <string name="skype_id">Skype ID</string>
+    <string name="skype_id_empty_error">Skype ID should not be empty</string>
+    <string name="cellphone">Cellphone Number</string>
+    <string name="cellphone_empty_error">Cellphone number should not be empty</string>
     <string name="backToLogin">Si ya estas registrado, volver a Login</string>
     <string name="title_activity_signup">Registrarse</string>
+    <string name="signup_button">Register</string>
 
     <!-- Forgot Password Page -->
     <string name="forgot_password"><u>Forgot Password</u></string>
