--- a/pickmeup/src/main/res/values/strings.xml
+++ b/pickmeup/src/main/res/values/strings.xml
@@ -56,6 +56,7 @@
     <string name="destination">Destino</string>
     <string name="cost">Costo por Pasajero(S/)</string>
     <string name="passenger_quantity">Cantidad de Pasajeros</string>
+    <string name="availability">Asientos disponibles</string>
     <string name="payment_method">Forma de pago</string>
     <string name="departure_time">Fecha de Partida</string>
     <string name="contact">Contacto</string>
