--- a/pickmeup/src/main/res/values/strings.xml
+++ b/pickmeup/src/main/res/values/strings.xml
@@ -25,19 +25,19 @@
     <string name="forgot_login"><u>Forgot password?</u></string>
     <string name="sign_up"><u>Or Sign Up</u></string>
     <string name="username_empty_error">The username should not be empty</string>
-    <string name="password_empty_error">The password should not be empty</string>
+    <string name="password_empty_error">The password should not be empty or less than 6 characters</string>
     <string name="password_invalid_match">Password and Confirmation didn\'t match </string>
     <string name="username_invalid_error">The username should be an email address</string>
 
     <!-- sign up Page -->
     <string name="name">First Name</string>
-    <string name="name_empty_error">First Name should not be empty</string>
+    <string name="name_error">First Name empty or invalid</string>
     <string name="last_name">Last Name</string>
-    <string name="last_name_empty_error">Last Name should not be empty</string>
+    <string name="last_name_error">Last Name empty or invalid</string>
     <string name="skype_id">Skype ID</string>
     <string name="skype_id_empty_error">Skype ID should not be empty</string>
     <string name="cellphone">Cellphone Number</string>
-    <string name="cellphone_empty_error">Cellphone number should not be empty</string>
+    <string name="cellphone_error">Cellphone number empty or invalid</string>
     <string name="backToLogin">Si ya estas registrado, volver a Login</string>
     <string name="title_activity_signup">Registrarse</string>
     <string name="signup_button">Register</string>
