--- a/pickmeup/src/main/res/values/strings.xml
+++ b/pickmeup/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">PickMeUp</string>
-    <string name="title_activity_add_route">Agregar Ruta</string>
+    <string name="title_activity_add_route">Add Route</string>
     <string name="title_activity_login">Login</string>
 
     <string name="hello_world">Hello world!</string>
